address review comments
Signed-off-by: Jan N. Klug <github@klug.nrw>